# e-tick

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
lib/epd1in54_V2/: epd1in54_V2.cpp  epd1in54_V2.h  epdif.cpp  epdif.h  epdpaint.cpp  epdpaint.h  font16.c  font24.c  fonts.h
src/: debug.h  main.cpp  main.rs  watch.cpp  watch.h
