[package]
name = "e-tick"
version = "0.1.0"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://www.github.com/Rahix/avr-hal"
rev = "97454c8"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"